--- a/src/sass/pages/_home-small.scss
+++ b/src/sass/pages/_home-small.scss
@@ -4,5 +4,4 @@
     justify-content: space-around;
     overflow: hidden;
     margin-top: 20px;
-    margin-bottom: 20px;
 }
